
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "toolplot"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version", "description"]
license = {file = "LICENSE"}
dependencies = [
    "tooltime>=0.2.10",
    "toolstr>=0.9.3",
    "typing-extensions>=4.0.0",
    "matplotlib>=3.1",
    "numpy>=1.19.0",
    "polars>=0.18.4",
    "plotly>=5.18.0",
]

[dependency-groups]
dev = [
    "mypy>=1.4.1",
]

[tool.mypy]
python_version = "3.9"
strict = true
implicit_reexport = true
files = ["toolplot"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
ignore = ["F401", "F403"]

